--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
+    "react-router": "^7.1.5",
     "tailwindcss": "^4.0.1"
   },
   "devDependencies": {
